# python-ai-agent-frameworks-demos

./: .env.sample  .env.sample.ollama  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/ollama/: Dockerfile  devcontainer.json
.github/workflows/: azure-dev.yaml  template-validation.yaml
examples/: ag2_basic.py  ag2_supervisor.py  ag2_tool.py  ag2_tools.py  agentframework_basic.py  agentframework_hitl.py  agentframework_magenticone.py  agentframework_supervisor.py  agentframework_tool.py  agentframework_tools.py  agentframework_workflow.py  autogen_basic.py  autogen_magenticone.py  autogen_magenticone_2.py  autogen_swarm.py  autogen_tools.py  langchainv1_basic.py  langchainv1_mcp_github.py  langchainv1_mcp_http.py  langchainv1_quickstart.py  langchainv1_supervisor.py  langchainv1_tool.py  langchainv1_tools.py  langgraph_agent.py  langgraph_mcp.py  llamaindex.py  openai_agents_basic.py  openai_agents_handoffs.py  openai_agents_mcp_http.py  openai_agents_tools.py  openai_functioncalling.py  pydanticai_basic.py  pydanticai_graph.py  pydanticai_mcp_github.py  pydanticai_mcp_http.py  pydanticai_multiagent.py  pydanticai_supervisor.py  pydanticai_tools.py  semantickernel2.py  semantickernel_groupchat.py  (+2 more)
examples/spanish/: README.md  agentframework_basic.py  agentframework_hitl.py  agentframework_magenticone.py  agentframework_supervisor.py  agentframework_tool.py  agentframework_tools.py  agentframework_workflow.py  autogen_basic.py  autogen_magenticone.py  (+30 more)
infra/: main.bicep  write_dot_env.ps1  write_dot_env.sh
