[project]
name = "python-ai-agent-frameworks-demos"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "azure-identity>=1.19.0",
    "openai>=1.109.1",
    "python-dotenv>=1.0.0",
    "pydantic>=2.10.0",
    "rich>=13.9.0",
    "dotenv-azd>=0.1.0",
    "aiohttp>=3.11.0",
    "faker>=33.0.0",
    "openai-agents>=0.1.0",
    "semantic-kernel>=1.20.0",
    "langgraph>=0.3.0",
    "langchain>=1.2.15",
    "langchain_openai>=1.1.14",
    "pydantic-ai>=1.77.0",
    "llama-index>=0.12.0",
    "llama-index-llms-openai-like>=0.3.0",
    "langchain-mcp-adapters>=0.1.0",
    "agent-framework-core==1.0.0",
    "agent-framework-openai==1.0.0",
    "agent-framework-devui>=1.0.0b260402",
    "agent-framework-orchestrations>=1.0.0b260402",
]

[tool.uv]
prerelease = "allow"

[tool.ruff]
line-length = 120
target-version = "py310"
lint.select = ["E", "F", "I", "UP"]
lint.ignore = ["D203"]
